test/tests/stages/18_structures/invalid_types/invalid_member_operators/bad_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[44]:
  struct
  identifier(s)
  {
  int
  identifier(x)
  ;
  int
  identifier(y)
  ;
  }
  ;
  struct
  identifier(t)
  {
  int
  identifier(blah)
  ;
  int
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(foo)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  return
  identifier(foo)
  .
  identifier(blah)
  ;
  }
